Bug 138829 - Base ODBC Name for Database - Enter one character loses focus from name textbox (Win + Linux&gen/kf5 backend)
Summary: Base ODBC Name for Database - Enter one character loses focus from name textb...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.1 target:7.0.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-12-11 17:11 UTC by bret_stern
Modified: 2021-01-17 23:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bret_stern 2020-12-11 17:11:48 UTC
Description:
When you use the database wizard, select ODBC, a database name prompt textbox
is displayed. However when I enter any single character, the box loses focus, and the [Next] button has focus.


Steps to Reproduce:
1. Database Wizard start
2. Select Connect to existing database
3. Select ODBC from listbox
4. Click Next
5. Start typing character in textbox for name of database
6. Textbox loses focus

Actual Results:
Doesn't work

Expected Results:
Should allow entry of name as prompted


Reproducible: Always


User Profile Reset: No



Additional Info:
see above
Comment 1 Robert Großkopf 2020-12-26 07:56:14 UTC
Have tested this with LO 7.0.4.2 on OpenSUSE 15.1 64bit rpm Linux with VCL: kf5.
Tried to type anything in the textbox, which appears in step 2 of the wizard.
The first character will be typed, but no more characters will appear. This doesn't happen in LO 6.4.5.2, so a regression.

You have to press the button "Browse" to see all the databases in odbc.ini. Pressing one key in this list box will switch to the database I'm looking for (with VCL: kf5 - not with VCL: gtk3 → will write another bug for this)
Comment 2 Aron Budea 2021-01-02 08:51:20 UTC
Happens with gen backend on Linux as well.
Comment 3 Aron Budea 2021-01-02 14:25:40 UTC
Actually, for me this happens in 6.4 as well. Could be bibisected to the following commit using repo bibisect-linux-64-6.4. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=69057064d8957804c76e623d57c103c3413b7cbc
author		Caolán McNamara <caolanm@redhat.com>	2019-08-05 17:26:53 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-08-22 16:37:16 +0200

weld ODbTypeWizDialogSetup
Comment 4 Caolán McNamara 2021-01-15 16:31:55 UTC
focus is getting grabbed by the roadmap label
Comment 5 Commit Notification 2021-01-16 15:04:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a4c9b7f3722cb496c01ae72c5897f3243523658d

tdf#138829 don't grab focus to roadmap label when sync timer fires

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2021-01-16 15:18:16 UTC
fixed in master, backports to 7-1 and 7-0 in gerrit
Comment 7 Commit Notification 2021-01-17 23:45:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/6c315bbeb16db9dcf157f24803cff7c51ec18ed8

tdf#138829 don't grab focus to roadmap label when sync timer fires

It will be available in 7.1.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2021-01-17 23:45:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/d11b11c39b2451b26daac4383d29eaa83dcc2bf5

tdf#138829 don't grab focus to roadmap label when sync timer fires

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.