tdf#138829 don't grab focus to roadmap label when sync timer fires

Change-Id: Icc8a03a2ce5d63f3a2c477671a9aa52aefd1df96